# EmbeddedWatch

./: .gitignore  CMakeLists.txt  ClockCounter.c  ClockCounter.h  EWatch.c  EWatch.h  EWatchAlarm.c  EWatchAlarm.h  EWatchClock.c  EWatchClock.h  EWatchControl.c  EWatchControl.h  EWatchStopwatch.c  EWatchStopwatch.h  EWatchTimeset.c  EWatchTimeset.h  watch.c
application/: CMakeLists.txt
application/include/: timer.hpp
application/src/: main.cpp  timer.cpp
include/: ClockCounter.h  EWatch.h  EWatchAlarm.h  EWatchClock.h  EWatchControl.h  EWatchEnums.h  EWatchStopwatch.h  EWatchTimeset.h
src/: ClockCounter.c  EWatch.c  EWatchAlarm.c  EWatchControl.c  EWatchStopwatch.c  EWatchTimeset.c
test/: CMakeLists.txt  Makefile  TestEWatch.c  TestEWatch.cpp  TestEWatchAlarm.c  TestEWatchAlarm.cpp  TestEWatchClock.c  TestEWatchClock.cpp  TestEWatchStopwatch.c  TestEWatchStopwatch.cpp  TestEWatchTimeset.c  TestEWatchTimeset.cpp  TestTimeset.c  t.sh  utility.c  utility.cpp  utility.h
